--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
     <title>Khalid Hussain Malik</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <!-- header section start -->
