up-arrow changed

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <!-- Scroll top button -->
     <a href="#home" class="top">
-      <img src="/images/scroll.jfif" width="25px" alt="top" />
+      <img src="/images/up-arrow.png" width="25px" alt="top" />
     </a>
 
     <!-- jquery cdn link -->
