--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Khalid Hussain Malik</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
   <body>
     <!-- header section start -->
@@ -46,7 +46,8 @@
       <p>
         I am a frontend web developer, I implement visual elements that users
         see and interact within a web application. As a Frontend Developer I
-        have hands on experience of <span>Reactjs, MaterialUI, Bootstrap, HTML&CSS</span> and
+        have hands on experience of
+        <span>Reactjs, MaterialUI, Bootstrap, HTML&CSS</span> and
         <span>Javascript</span>.
       </p>
       <a href="#about"
@@ -91,33 +92,25 @@
           <i class="fas fa-graduation-cap"></i>
           <span>2022</span>
           <h3>Full Stack Web Development</h3>
-          <p>
-            Jan 2022 | DevNation
-          </p>
+          <p>Jan 2022 | DevNation</p>
         </div>
         <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2021</span>
-            <h3>MERN Stack</h3>
-            <p>
-              Jan 2021 | NexusBerry Lahore
-            </p>
-          </div>
+          <i class="fas fa-graduation-cap"></i>
+          <span>2021</span>
+          <h3>MERN Stack</h3>
+          <p>Jan 2021 | NexusBerry Lahore</p>
+        </div>
         <div class="box">
           <i class="fas fa-graduation-cap"></i>
           <span>2020</span>
           <h3>Python</h3>
-          <p>
-            Coursera | Online Certificate
-          </p>
+          <p>Coursera | Online Certificate</p>
         </div>
         <div class="box">
           <i class="fas fa-graduation-cap"></i>
           <span>2019</span>
           <h3>HTML, CSS and Javascript</h3>
-          <p>
-            Udemy | Online Certificate
-          </p>
+          <p>Udemy | Online Certificate</p>
         </div>
       </div>
     </section>
@@ -158,14 +151,24 @@
           <div class="info">
             <h3><i class="fas fa-envelope"></i>khalidhussainnn@gmail.com</h3>
             <h3><i class="fas fa-phone"></i>+92 300 3822322</h3>
+            <a href="https://web.facebook.com/?_rdc=1&_rdr" target="_blank"
+              ><h3>
+                <i class="fa-brands fa-facebook"></i>Khalid Hussain Malik
+              </h3></a
+            >
+            <a href="https://www.youtube.com/channel/UCoFa7EpG3OSDwd3VYnyHQaw" target="_blank"
+            ><h3>
+              <i class="fa-brands fa-youtube"></i>Programming with Ease
+            </h3></a
+          >
           </div>
         </div>
-        <form action="">
-          <input type="text" placeholder="Name" class="box" />
-          <input type="email" placeholder="Email" class="box" />
-          <input type="text" placeholder="Subject" class="box" />
+        <form action="https://formsubmit.co/khalidhussainnn@gmail.com" method="POST">
+          <input type="text" name="name" placeholder="Name" class="box" />
+          <input type="email" name="email" placeholder="Email" class="box" />
+          <input type="text" name="subject" placeholder="Subject" class="box" />
           <textarea
-            name=""
+            name="textarea"
             id=""
             cols="30"
             rows="10"
