download cv added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h3><span>Company: </span>SIMCS</h3>
           <h3><span>Role: </span>Frontend Developer</h3>
           <h3><span>Since: </span>2021</h3>
-          <a href="#"
+          <a href="/resources/khalid.pdf" download=""
             ><button class="btn">
               Download CV <i class="fas fa-download"></i></button
           ></a>
