--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div class="row">
         <div class="info">
           <h3><span>Name: </span>Khalid Hussain</h3>
-          <h3><span>Company: </span>SIMCS</h3>
-          <h3><span>Role: </span>Frontend Developer</h3>
-          <h3><span>Since: </span>2021</h3>
+          <h3><span>Company: </span>Precise Tech</h3>
+          <h3><span>Role: </span>React Developer</h3>
+          <h3><span>Since: </span>September, 2022</h3>
           <a href="/resources/khalid.pdf" download=""
             ><button class="btn">
               Download CV <i class="fas fa-download"></i></button
@@ -76,7 +76,7 @@
             <h3>years of experience</h3>
           </div>
           <div class="box">
-            <span>10+</span>
+            <span>5+</span>
             <h3>projects completed</h3>
           </div>
         </div>
